fix: remove justify alignment

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -139,7 +139,6 @@
 
 .project-footer-content {
   white-space: pre-wrap;
-  text-align: justify;
 }
 
 .projects-content img {
